# astro

./: .gitignore  README.md
.circleci/: config.yml
checks/parser/: run.py
checks/parser/failures/: 1_malformed_func_params.ast  README.md
checks/parser/passes/: 0_assignments.ast  0_calls.ast  0_full.ast  0_if_statement.ast  0_loops.ast
checks/sa/: run.py
checks/sa/failures/: 1_same_name_params.ast
docs/: BASIC.md  astro-grammar.md  grammar.md  scratch.md
docs/scratch-code/: example.ast  ideaing.ast
docs/scratch-code/proj/: astro.toml
docs/skiff_target/: ASM_HLL_Barrier.md  skiff_setup.asm
src/: CMakeLists.txt  astrod.cpp  defines.hpp
src/cli/: add_mod.cpp  build_project.cpp  cli.hpp  new_binary.cpp  new_project.cpp
src/compiler/: ast.cpp  ast.hpp  compiler.cpp  compiler.hpp  defines.hpp  errors.hpp  lexer.cpp  lexer.hpp  page.cpp  page.hpp  parser.cpp  parser.hpp  tokens.cpp  tokens.hpp
src/compiler/context/: context.hpp  scope.hpp
src/compiler/front/: lexer.cpp  lexer.hpp  page.cpp  page.hpp  parser.cpp  parser.hpp  tokens.cpp  tokens.hpp
src/compiler/lang/: astro.cpp  astro.hpp  common.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  tokens.hpp  types.cpp  types.hpp
src/compiler/middle/: README.md  ir.cpp  ir.hpp  middle.cpp  middle.hpp
src/compiler/shared/: common.hpp  expression_eval.cpp  expression_eval.hpp  page.cpp  page.hpp  (+4 more)
src/errors/: error_manager.cpp  error_manager.hpp  errors.hpp
src/project/: project.cpp  project.hpp
src/tests/: CMakeLists.txt  example.cpp  lexer.cpp  main.cpp  scoped_symbol_table.cpp  types.cpp
(+19 files in other folders)
